[gd_scene format=3 uid="uid://4q6ktirxeeu5"]

[ext_resource type="Script" uid="uid://yms2n1s6plc4" path="res://scenes/ui/main_menu.gd" id="1_mainmenu"]

[node name="MainMenu" type="Control" unique_id=331334874]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mainmenu")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1043117365]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 1)

[node name="TitleLabel" type="Label" parent="." unique_id=930076737]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.3
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"HeaderLarge"
text = "ZOMBIE-X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=595379292]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer" unique_id=2055078885]
layout_mode = 2
text = "开始游戏"

[node name="SettingsButton" type="Button" parent="VBoxContainer" unique_id=2138094552]
layout_mode = 2
text = "设置"

[node name="QuitButton" type="Button" parent="VBoxContainer" unique_id=887365092]
layout_mode = 2
text = "退出游戏"
